Remove padding added to body in global css + add margin top of height of nav bar plus 16 pixels to ensure that taskCards never bleed into the nav bar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,6 @@ html,
 body {
   margin: 0;
   padding: 0;
-  padding-top: 28;
   max-width: 100vw;
   overflow-x: hidden;
 }
